--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<b>Draw anything you want</b>
 	<hr>
 	<canvas id="canvas"></canvas>
-	<script src="index.js"></script>
+	<script src="file.js"></script>
 </body>
 
 </html>
