--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 </head>
 
 <body>
-	<h1>GeeksforGeeks</h1>
-	<b>Draw anything you want</b>
-	<hr>
 	<canvas id="canvas"></canvas>
 	<script src="file.js"></script>
+	<p>it's by GeeksforGeeks . Thanks a lot GeeksforGeeks</p>
 </body>
 
 </html>
